<resources>
    <string name="app_name">PersonalHealthMonitoringApp</string>
    <string name="health_monitor">Health Monitor</string>
    <string name="create_new_account">Create New Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_registered_login_here">Already Registered ? Login Here</string>
    <string name="login">Login</string>
    <string name="new_here_create_account">New Here ? Create Account</string>
    <string name="reset_password">Reset Password</string>
    <string name="twitterUsername">\@joeytribbiani</string>
    <string name="add_the_vital_details">Add the Vital Details</string>
    <string name="add">Add</string>
    <string name="enter_notes">enter_notes</string>
    <string name="time_of_consumption_of_medicine">time_of_consumption_of_medicine</string>
    <string name="medicines_prescribed">medicines_prescribed</string>
    <string name="enter_health_condition_disease">enter_health_condition_disease</string>
    <string name="pick_a_date">pick_a_date</string>
    <string name="enter_doctor_s_name">enter_doctor_s_name</string>
    <string name="enter_medication_deatails">enter_medication_deatails</string>
    <string name="add_medication">Add Medication</string>
    <string name="note_description">note_description</string>
    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>

    <string name="editor_insert_reminder_successful">Reminder saved</string>

    <string name="editor_insert_reminder_failed">Error with saving reminder</string>

    <string name="editor_update_reminder_successful">Reminder updated</string>

    <string name="editor_update_reminder_failed">Error with updating reminder</string>

    <string name="reminder_title">AlarmReminder</string>
</resources>